kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: choreo-system
  labels:
    name: choreo-system
