kustomize/base/dep-choreo-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    choreo.component: choreo-mysql
  name: choreo-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      choreo.component: choreo-mysql
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        choreo.component: choreo-mysql
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          valueFrom:
           secretKeyRef:
            name: choreo-secret
            key: db_password
        image: choreoipaas/choreo-mysql:latest
        name: choreo-mysql
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: choreo-mysql-claim
      restartPolicy: Always
      volumes:
      - name: choreo-mysql-claim
        persistentVolumeClaim:
          claimName: choreo-mysql-claim
