kustomize/base/dep-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    choreo.component: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      choreo.component: frontend
  strategy: {}
  template:
    metadata:
      labels:
        choreo.component: frontend
    spec:
      containers:
      - env:
        - name: APP_API
          valueFrom:
            configMapKeyRef:
              key: APP_API
              name: cm-frontend
        - name: AUTH_FLOW
          valueFrom:
            configMapKeyRef:
              key: AUTH_FLOW
              name: cm-frontend
        - name: CLIENT_ID
          valueFrom:
            configMapKeyRef:
              key: CLIENT_ID
              name: cm-frontend
        - name: LOGS_API
          valueFrom:
            configMapKeyRef:
              key: LOGS_API
              name: cm-frontend
        - name: OBSERVE_API
          valueFrom:
            configMapKeyRef:
              key: OBSERVE_API
              name: cm-frontend
        - name: REDIRECT_URL
          valueFrom:
            configMapKeyRef:
              key: REDIRECT_URL
              name: cm-frontend
        - name: TENANT
          valueFrom:
            configMapKeyRef:
              key: TENANT
              name: cm-frontend
        image: choreoipaas/console-app:latest
        imagePullPolicy: ""
        name: frontend
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
