kustomize/base/dep-negotiator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    choreo.component: negotiator
  name: negotiator
spec:
  replicas: 1
  selector:
    matchLabels:
      choreo.component: negotiator
  strategy: {}
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        io.kompose.network/choreo: "true"
        choreo.component: negotiator
    spec:
      containers:
      - env:
        - name: CHOREO_APP_URL
          valueFrom:
            configMapKeyRef:
              key: CHOREO_APP_URL
              name: cm-negotiator
        - name: CHOREO_DB_HOST
          valueFrom:
            configMapKeyRef:
              key: CHOREO_DB_HOST
              name: cm-choreodb
        - name: CHOREO_DB_NAME
          valueFrom:
            configMapKeyRef:
              key: CHOREO_DB_NAME
              name: cm-choreodb
        - name: CHOREO_DB_PASSWORD
          valueFrom: 
           secretKeyRef:
             name: choreo-secret
             key: db_password
        - name: CHOREO_DB_PORT
          valueFrom:
            configMapKeyRef:
              key: CHOREO_DB_PORT
              name: cm-choreodb
        - name: CHOREO_DB_USERNAME
          valueFrom:
            configMapKeyRef:
              key: CHOREO_DB_USERNAME
              name: cm-choreodb
        image: choreoipaas/choreo-negotiator:latest
        name: negotiator
        readinessProbe:
            httpGet:
             port: 9091
             path: /health
        livenessProbe:
            httpGet:
             port: 9091
             path: /health
        ports:
        - containerPort: 9090
        - containerPort: 9091
        resources: {}
      restartPolicy: Always
