kustomize/base/dep-telemetry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    choreo.component: telemetry
  name: telemetry
spec:
  replicas: 1 
  selector:
    matchLabels:
      choreo.component: telemetry
  strategy: {}
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        io.kompose.network/choreo: "true"
        choreo.component: telemetry
    spec:
      containers:
      - env:
        - name: CHOREO_DB_HOST
          valueFrom:
            configMapKeyRef:
              key: CHOREO_DB_HOST
              name: cm-choreodb
        - name: CHOREO_DB_NAME
          valueFrom:
            configMapKeyRef:
              key: CHOREO_DB_NAME
              name: cm-choreodb
        - name: CHOREO_DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: choreo-secret
              key: db_password
        - name: CHOREO_DB_PORT
          valueFrom:
            configMapKeyRef:
              key: CHOREO_DB_PORT
              name: cm-choreodb
        - name: CHOREO_DB_USERNAME
          valueFrom:
            configMapKeyRef:
              key: CHOREO_DB_USERNAME
              name: cm-choreodb
        - name: EVENTHUB_NAMESPACE
          valueFrom:
            configMapKeyRef:
              key: EVENTHUB_NAMESPACE
              name: cm-eventhub
        - name: EVENTHUB_SHARED_ACCESS_POLICY_NAME
          valueFrom:
            configMapKeyRef:
              key: EVENTHUB_SHARED_ACCESS_POLICY_NAME
              name: cm-eventhub
        - name: METRICS_EVENTHUB_NAME
          valueFrom:
            configMapKeyRef:
              key: METRICS_EVENTHUB_NAME
              name: cm-eventhub
        - name: METRICS_TO_BE_STORED
          valueFrom:
            configMapKeyRef:
              key: METRICS_TO_BE_STORED
              name: cm-eventhub
        - name: EVENTHUB_SHARED_ACCESS_SIGNATURE_KEY
          valueFrom: 
            secretKeyRef:
              name: choreo-secret
              key: eh_shared_access_sig_key  
        image: choreoipaas/choreo-telemetry:latest
        imagePullPolicy: ""
        name: telemetry
        ports:
        - containerPort: 9090
        - containerPort: 9091
        readinessProbe:
            httpGet:
             port: 9091
             path: /health
        livenessProbe:
            httpGet:
             port: 9091
             path: /health
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
