kustomize/base/svc-negotiator.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    choreo.component: negotiator
  name: negotiator
spec:
  ports:
  - name: "negotiator-port"
    port: 9090
    targetPort: 9090
  selector:
    choreo.component: negotiator
