kustomize/base/svc-telemetry.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    choreo.component: telemetry
  name: telemetry
spec:
  ports:
  - name: "telemetry-port"
    port: 9090
    targetPort: 9090
  selector:
    choreo.component: telemetry
